--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8"/>
     </head>
     <body>
-        <p>aqua-and-pink is running now. (This information is sending by hand so it takes time for the data to be updated.)</p>
-        <p>aqua-and-pink は正常に動作しています。(本情報は手動でのアップデートのため更新に遅れが生じる場合がございます)</p>
+        <p>aqua-and-pink is stopping now because running out of server usage of this month. (This information is sending by hand so it takes time for the data to be updated.</p>
+        <p>今月のサーバー使用可能量がなくなったためaqua-and-pinkは停止しています。(本情報は手動でのアップデートのため更新に遅れが生じる場合がございます)</p>
     </body>
 </html>
